--- a/.isort.cfg
+++ b/.isort.cfg
@@ -3,6 +3,6 @@ profile=black
 src_paths=src,test
 known_illumidesk=illumidesk
 sections=FUTURE,STDLIB,FIRSTPARTY,THIRDPARTY,ILLUMIDESK,LOCALFOLDER
-known_third_party = attr,pytest,requests,setuptools
+known_third_party = attr,cattr,dotenv,pytest,requests,setuptools
 multi_line_output=7
 force_single_line=True
